[Bugfix] avoid layout borken due to overflowed delete button

--- a/src/components/FriendListComponent.css
+++ b/src/components/FriendListComponent.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .list-item > a {
